# erl_active_mapping

./: .clang-format  CMakeLists.txt  README.md  package.xml  pyproject.toml
backup/: agent_frontier_size_2d.cpp  agent_frontier_size_2d.hpp  plan_strategy.hpp
config/: frontier_based_grid_2d.yaml
include/erl_active_mapping/: agent_base.hpp  frontier_based_grid_2d.hpp
python/binding/: pybind11_erl_active_mapping.cpp
src/: frontier_based_grid_2d.cpp
test/gtest/: test_frontier_based_grid_2d.cpp
